//
//  Constants.swift
//  Disney Character Explorer
//
//  Created by Emil Vaklinov on 21/03/2024.
//

import Foundation

struct Constants {

    struct Buttons {
        static let addToFavorites = "Add to Favorites"
        static let removeFromFavorites = "Remove from Favorites"
    }

    struct Titles {
        static let characters = "Characters"
        static let favorites = "Favorites"
        static let films = "Films"
        static let tvShows = "TV Shows"
        static let videoGames = "Video Games"
    }

    struct Placeholders {
        static let searchCharacters = "Search Characters"
        static let defaultPlaceholder = "Placeholder"
    }

    struct Emojis {
        static let films = "🎬"
        static let tvShows = "📺"
        static let videoGames = "🎮"
        static let parkEmoji = "🎢"
    }

    struct Links {
        static let visitWiki = "Visit Wiki page"
    }

    // Additional categories like Messages, ErrorMessages, etc., can be added here
}
